# pytots

./: .gitignore  GITHUB_DESCRIPTION.md  LICENSE  MANIFEST.in  README.md  README_en.md  main.py  pyproject.toml
.trae/rules/: project_rules.md
py_ts/: README.md  __init__.py  clf.py  main.py  type_map.py
py_ts/example/: README.md  advanced_types_example.py  basic_types_example.py  circular_reference_example.py  functions_classes_example.py  real_world_scenarios.py
pytots/: __init__.py  clf.py  formart.py  main.py  processer.py  store.py  type_map.py
pytots/example/: advanced_types_example.py  basic_types_example.py  circular_reference_example.py  custom_plugin.py  debug_literal.py  enum_example.py  literal_example.py  pydantic_example.py  sqlmodel_example.py
pytots/plugin/: __init__.py  pydantic_plugin.py  sqlmodel_plugin.py  tools.py
pytots/plugin/inner/: __init__.py  dataclass_plugin.py  typedict_plugin.py
pytots/plugin/plus/: __init__.py  pydantic_plugin.py  sqlmodel_plugin.py
test/: test.py  test_basic_type.py  test_pydantic_sqlmodel.py  typeVar说明书.md
