[project]
name = "py-ts"
authors = [
    { name = "utran", email = "utran.host@qq.com" },
]
dynamic = ['version']
description = "A lightweight tool that helps you convert Python types to TypeScript types"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []



[tool.hatch.version]
path = "lib/__init__.py"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
packages = ["py_ts"]

[tool.hatch.build.targets.wheel]
packages = ["py_ts"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
