[project]
name = "pytots"
authors = [
    { name = "utran", email = "utran.host@qq.com" },
]
version = "0.2.0"
description = "A lightweight tool that helps you convert Python types to TypeScript types"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.3.0",
    "twine>=6.2.0",
]





[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
packages = ["pytots"]

[tool.hatch.build.targets.wheel]
packages = ["pytots"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
