[project]
name = "pytots"
authors = [
    { name = "utran", email = "utran.host@qq.com" },
]
version = "0.3.0"
description = "A lightweight tool that helps you convert Python types to TypeScript types"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["typescript", "python", "type-conversion", "pydantic", "sqlmodel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []





[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "sqlmodel>=0.0.27",
    "build>=1.3.0",
    "twine>=6.2.0",
]

[tool.setuptools]
packages = ["pytots"]

[tool.hatch.build.targets.wheel]
packages = ["pytots"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
